<resources>
    <string name="app_name">Flex 3.0</string>
    <string name="addWorkout">Add Workout</string>
    <string name="startWorkout">Start Workout</string>
    <string name="add_exercise">ADD EXERCISE</string>
    <string name="cancel">Cancel</string>
    <string name="create_button">Create Workout</string>
    <string name="start_workout">Start Workout</string>
    <string name="workout_name_text">Workout Name</string>
    <string name="create_workout_button">CREATE</string>
    <string name="name_of_workout_text">Workout Name</string>
    <string name="name_of_exercise">Exercise Name</string>
    <string name="number_of_reps">Number of Reps</string>
    <string name="number_of_sets">Number of Sets</string>
    <string name="complete_create">Done</string>
    <string name="workout_list_title">Workout List</string>
    <string name="home">Home</string>
    <string name="edit_workout">Exercises</string>
    <string name="no_tasks">Nothing to see yet</string>
    <string name="new_workout_name">Exercise Name</string>
    <string name="new_exercise_name">Exercise Name</string>
    <string name="new_sets">Sets</string>
    <string name="new_reps">Reps</string>
    <string name="new_exercise">New Exercise</string>
    <string name="add">ADD</string>
    <string name="remove">Remove</string>
    <string name="rest_btw_ex">Rest Between Exercises</string>
    <string name="rest_time">Rest Time Remaining</string>
    <string name="time_until_next_ex">Time Until Next Exercise</string>


</resources>
