<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_workout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gymtyme.flex30.ViewExerciseActivity">

    <TextView
        android:id = "@+id/app_name_text"
        android:textSize="32sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_workout"
        android:layout_alignParentStart="true"
        android:textAllCaps="true"
        android:layout_margin="5dp"
        android:background="#e60000"
        android:textColor="#ffffff"
        android:padding="15dp"
        android:gravity="center" />
    <ListView
        android:id="@android:id/list"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/app_name_text"
        android:layout_above="@+id/complete_create"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@id/android:empty"
        android:text = "@string/no_tasks"
        android:gravity="center"
        android:layout_below="@+id/app_name_text"
        android:layout_above="@+id/complete_create"
        />

    <Button
        android:id = "@+id/add_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_exercise"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="#e60000"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/app_name_text" />

    <Button
        android:id = "@+id/edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:background="#e60000"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/complete_create"
        android:text="@string/complete_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#e60000"
        android:textColor="#ffffff"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/app_name_text" />

</RelativeLayout>
